--- a/v2.02/Xero.API.Schemas.csproj
+++ b/v2.02/Xero.API.Schemas.csproj
@@ -40,6 +40,7 @@
     <None Include="Address.xsd" />
     <None Include="ApiException.xsd" />
     <None Include="BaseTypes.xsd" />
+    <None Include="BrandingTheme.xsd" />
     <None Include="Contact.xsd" />
     <None Include="CreditNote.xsd" />
     <None Include="Currency.xsd" />
