Add ManualJournals.xsd; Fixed to Invoice/Items base type

--- a/v2.02/Xero.API.Schemas.csproj
+++ b/v2.02/Xero.API.Schemas.csproj
@@ -72,6 +72,9 @@
     </None>
     <None Include="Journal.xsd" />
     <None Include="LineItem.xsd" />
+    <None Include="ManualJournal.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Organisation.xsd" />
     <None Include="Payment.xsd" />
     <None Include="Response.xsd" />
