Add Reports schema for v2.08 release

--- a/v2.02/Xero.API.Schemas.csproj
+++ b/v2.02/Xero.API.Schemas.csproj
@@ -77,6 +77,9 @@
     </None>
     <None Include="Organisation.xsd" />
     <None Include="Payment.xsd" />
+    <None Include="Report.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Response.xsd" />
     <None Include="TaxRate.xsd" />
     <None Include="Tracking.xsd" />
