Add Employees endpoint (v2.08)

--- a/v2.00/Xero.API.Schemas.csproj
+++ b/v2.00/Xero.API.Schemas.csproj
@@ -66,6 +66,9 @@
     <None Include="CreditNote.xsd" />
     <None Include="Currency.xsd" />
     <None Include="CurrencyCode.xsd" />
+    <None Include="Employee.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Invoice.xsd" />
     <None Include="Items.xsd">
       <SubType>Designer</SubType>
