Fix up Payment and Organisation types (v2.08)

--- a/v2.00/Xero.API.Schemas.csproj
+++ b/v2.00/Xero.API.Schemas.csproj
@@ -63,6 +63,9 @@
     <None Include="BaseTypes.xsd" />
     <None Include="BrandingTheme.xsd" />
     <None Include="Contact.xsd" />
+    <None Include="CountryCode.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="CreditNote.xsd" />
     <None Include="Currency.xsd" />
     <None Include="CurrencyCode.xsd" />
