Add Attachments schema (> v2.09)

--- a/v2.00/Xero.API.Schemas.csproj
+++ b/v2.00/Xero.API.Schemas.csproj
@@ -60,6 +60,9 @@
     <None Include="Account.xsd" />
     <None Include="Address.xsd" />
     <None Include="ApiException.xsd" />
+    <None Include="Attachment.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="BaseTypes.xsd" />
     <None Include="BrandingTheme.xsd" />
     <None Include="Contact.xsd" />
