Add BankTransaction schema (> 2.09)

--- a/v2.00/Xero.API.Schemas.csproj
+++ b/v2.00/Xero.API.Schemas.csproj
@@ -63,6 +63,9 @@
     <None Include="Attachment.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="BankTransaction.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="BaseTypes.xsd" />
     <None Include="BrandingTheme.xsd" />
     <None Include="Contact.xsd" />
