Update User.xsd (v2.13)

--- a/v2.00/Xero.API.Schemas.csproj
+++ b/v2.00/Xero.API.Schemas.csproj
@@ -95,6 +95,9 @@
     <None Include="Response.xsd" />
     <None Include="TaxRate.xsd" />
     <None Include="Tracking.xsd" />
+    <None Include="User.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
