--- a/v2.00/Xero.API.Schemas.csproj
+++ b/v2.00/Xero.API.Schemas.csproj
@@ -89,6 +89,9 @@
     </None>
     <None Include="Organisation.xsd" />
     <None Include="Payment.xsd" />
+    <None Include="Receipt.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Report.xsd">
       <SubType>Designer</SubType>
     </None>
